--- a/views/3view/pages/detail.html
+++ b/views/3view/pages/detail.html
@@ -122,106 +122,8 @@
 			</li>
 		</ul>
 	</div>
-	<div class="footer">
-		<ul class="footer-ul">
-			<li>
-				<img src="../images/main_icon01.png">
-				<span class="footer-image-label">이력</span>
-			</li>
-			<li>
-				<a href="./monitoring.html">
-					<img src="../images/main_icon02.png">
-					<span class="footer-image-label">모니터링</span>
-				</a>
-			</li>
-			<li>
-				<img src="../images/main_icon03.png">
-				<span class="footer-image-label">금형</span>
-			</li>
-			<li>
-				<img src="../images/main_icon04.png">
-				<span class="footer-image-label">시스템</span>
-			</li>
-			<li class="footer-status-label">
-				<div class="error-wrap">
-					<div class="error-box" id="allowableError">
-						<img src="../images/ICON_INFO_TOLERANCE.png">
-						<span class="error-msg">허용오차 초과</span>
-					</div>
-					<div class="error-box" id="mnmtError">
-						<img src="../images/ICON_INFO_TOLERANCE.png">
-						<span class="error-msg">관리오차 초과</span>
-					</div>
-				</div>
-				<span class="footer-status-txt">
-					<span class="footer-status-txt1">INPUT</span>
-					<span class="footer-status-txt1">1</span>
-					<span class="footer-status-txt1">2</span>
-					<span class="footer-status-txt1">3</span>
-					<span class="footer-status-txt1">4</span>
-					<span class="footer-status-txt1">OUTPUT</span>
-					<span class="footer-status-txt1" id="output1">1</span>
-					<span class="footer-status-txt1" id="output2">2</span>
-					<span class="footer-status-txt1" id="output3">3</span>
-					<span class="footer-status-txt1" id="output4">4</span>
-					<span class="footer-status-txt1" id="output5">5</span>
-					<span class="footer-status-txt1" id="output6">6</span>
-				</span>
-			</li>
-		</ul>
-	</div>
-	<div class="right-menu">
-		<ul class="right-ul">
-			<li>
-				<img src="../images/main_icon05.png">
-				<span class="right-title-txt">압조력</span>
-			</li>
-			<li>
-				<img src="../images/main_icon06.png">
-				<span class="right-title-txt">피크</span>
-			</li>
-			<li>
-				<img src="../images/main_icon07.png">
-				<span class="right-title-txt">SPOP</span>
-			</li>
-			<li>
-				<img src="../images/main_icon08.png">
-				<span class="right-title-txt1">생산제품</span>
-				<span class="right-title-txt2">56,029</span>
-			</li>
-			<li>
-				<img src="../images/main_icon08.png">
-				<span class="right-title-txt1">제품생산량</span>
-				<span class="right-title-txt2">56,029</span>
-			</li>
-			<li>
-				<img src="../images/main_icon08.png">
-				<span class="right-title-txt1">일일생산량</span>
-				<span class="right-title-txt2">56,029</span>
-			</li>
-			<li>
-				<img src="../images/main_icon09.png">
-				<span class="right-title-txt1">생산목표</span>
-				<span class="right-title-txt2">10</span>
-				<span class="right-title-txt3">0%</span>
-				<span class="right-title-txt4">
-					<img src="../images/clock.png" class="clock-icon"> 00:00:00
-				</span>
-				<div class="right-bar-graph">
-					<p class="position:relative;">
-						<span class="right-bar-gauge"></span>
-					</p>
-				</div>
-			</li>
-			<li class="right-spm">
-				<span>0</span> [SPM]
-			</li>
-			<li onclick="getStart();">
-				<img src="../images/main_icon10.png">
-				<span class="right-title-txt">학 습</span>
-			</li>
-		</ul>
-	</div>
+	<div class="footer"></div>
+	<div class="right-menu"></div>
 	<div class="div-cover1" id="divCover1" style="position:absolute;top:490px;left:155px;background-color:rgba(0,0,255,0);width:720px;height:90px;z-index:10;"></div>
 	<div class="div-cover1" id="divCover2" style="position:absolute;top:585px;left:155px;background-color:rgba(0,0,255,0);width:720px;height:90px;z-index:10;"></div>
 </div>
@@ -259,6 +161,10 @@
 	</p>
 </div>
 
+<script>
+    $(".right-menu").load("../include/right-menu.html");
+    $(".footer").load("../include/footer-ul.html");
+</script>
 <script src="../js/common.js"></script>
 <script src="../js/keyboard.js"></script>
 <script src="../js/detail.js"></script>
