--- a/views/3view/pages/main.html
+++ b/views/3view/pages/main.html
@@ -10,158 +10,58 @@
 <div class="wrap">
 	<div class="main-content">
 		<ul class="graph-ul" id="graphUl">
-			<li class="graph-box" id="graphBox1">
-				<p class="graph-title" id="graphTitle1">1 단 
-					<span class="max-value"><b id="peak1">0</b></span>
-				</p>
-			  <canvas id="canvas1" class="main-canvas" style="height:127px;"></canvas>
-			</li>
-			<li class="graph-box" id="graphBox2">
-				<p class="graph-title" id="graphTitle2">2 단 
-					<span class="max-value"><b id="peak2">0</b></span>
-				</p>
-			  <canvas id="canvas2" class="main-canvas" style="height:127px;"></canvas>
-			</li>
-			<li class="graph-box" id="graphBox3">
-				<p class="graph-title" id="graphTitle3">3 단 
-					<span class="max-value"><b id="peak3">0</b></span>
-				</p>
-			  <canvas id="canvas3" class="main-canvas" style="height:127px;"></canvas>
-			</li>
-			<li class="graph-box" id="graphBox4">
-				<p class="graph-title" id="graphTitle4">4 단 
-					<span class="max-value"><b id="peak4">0</b></span>
-				</p>
-			  <canvas id="canvas4" class="main-canvas" style="height:127px;"></canvas>
-			</li>
-			<li class="graph-box" id="graphBox5">
-				<p class="graph-title" id="graphTitle5">5 단 
-					<span class="max-value"><b id="peak5">0</b></span>
-				</p>
-			  <canvas id="canvas5" class="main-canvas" style="height:127px;"></canvas>
-			</li>
-			<li class="graph-box" id="graphBox6">
-				<p class="graph-title" id="graphTitle6">6단 
-					<span class="max-value"><b id="peak6">0</b></span>
-				</p>
-			  <canvas id="canvas6" class="main-canvas" style="height:127px;"></canvas>
-			</li>
-			<li class="graph-box" id="graphBox7">
-				<p class="graph-title" id="graphTitle7">7 단 
-					<span class="max-value"><b id="peak7">0</b></span>
-				</p>
-			  <canvas id="canvas7" class="main-canvas" style="height:127px;"></canvas>
-			</li>
-			<li class="graph-box" id="graphBox8">
-				<p class="graph-title" id="graphTitle8">8 단 
-					<span class="max-value"><b id="peak8">0</b></span>
-				</p>
-			  <canvas id="canvas8" class="main-canvas" style="height:127px;"></canvas>
-			</li>
-		</ul>
+            <li class="graph-box" id="graphBox1">
+                <p class="graph-title" id="graphTitle1">1 단 
+                    <span class="max-value"><b id="peak1">0</b></span>
+                </p>
+              <canvas id="canvas1" class="main-canvas" style="height:127px;"></canvas>
+            </li>
+            <li class="graph-box" id="graphBox2">
+                <p class="graph-title" id="graphTitle2">2 단 
+                    <span class="max-value"><b id="peak2">0</b></span>
+                </p>
+              <canvas id="canvas2" class="main-canvas" style="height:127px;"></canvas>
+            </li>
+            <li class="graph-box" id="graphBox3">
+                <p class="graph-title" id="graphTitle3">3 단 
+                    <span class="max-value"><b id="peak3">0</b></span>
+                </p>
+              <canvas id="canvas3" class="main-canvas" style="height:127px;"></canvas>
+            </li>
+            <li class="graph-box" id="graphBox4">
+                <p class="graph-title" id="graphTitle4">4 단 
+                    <span class="max-value"><b id="peak4">0</b></span>
+                </p>
+              <canvas id="canvas4" class="main-canvas" style="height:127px;"></canvas>
+            </li>
+            <li class="graph-box" id="graphBox5">
+                <p class="graph-title" id="graphTitle5">5 단 
+                    <span class="max-value"><b id="peak5">0</b></span>
+                </p>
+              <canvas id="canvas5" class="main-canvas" style="height:127px;"></canvas>
+            </li>
+            <li class="graph-box" id="graphBox6">
+                <p class="graph-title" id="graphTitle6">6단 
+                    <span class="max-value"><b id="peak6">0</b></span>
+                </p>
+              <canvas id="canvas6" class="main-canvas" style="height:127px;"></canvas>
+            </li>
+            <li class="graph-box" id="graphBox7">
+                <p class="graph-title" id="graphTitle7">7 단 
+                    <span class="max-value"><b id="peak7">0</b></span>
+                </p>
+              <canvas id="canvas7" class="main-canvas" style="height:127px;"></canvas>
+            </li>
+            <li class="graph-box" id="graphBox8">
+                <p class="graph-title" id="graphTitle8">8 단 
+                    <span class="max-value"><b id="peak8">0</b></span>
+                </p>
+              <canvas id="canvas8" class="main-canvas" style="height:127px;"></canvas>
+            </li>
+        </ul>
 	</div>
-	<div class="footer">
-		<ul class="footer-ul">
-			<li>
-				<img src="../images/main_icon01.png">
-				<span class="footer-image-label">이력</span>
-			</li>
-			<li>
-				<a href="./monitoring.html">
-					<img src="../images/main_icon02.png">
-					<span class="footer-image-label">모니터링</span>
-				</a>
-			</li>
-			<li>
-				<img src="../images/main_icon03.png">
-				<span class="footer-image-label">금형</span>
-			</li>
-			<li>
-				<img src="../images/main_icon04.png">
-				<span class="footer-image-label">시스템</span>
-			</li>
-			<li class="footer-status-label">
-				<div class="error-wrap">
-					<div class="error-box" id="allowableError">
-						<img src="../images/ICON_INFO_TOLERANCE.png">
-						<span class="error-msg">허용오차 초과</span>
-					</div>
-					<div class="error-box" id="mnmtError">
-						<img src="../images/ICON_INFO_TOLERANCE.png">
-						<span class="error-msg">관리오차 초과</span>
-					</div>
-				</div>
-				<span class="footer-status-txt">
-					<span class="footer-status-txt1">INPUT</span>
-					<span class="footer-status-txt1">1</span>
-					<span class="footer-status-txt1">2</span>
-					<span class="footer-status-txt1">3</span>
-					<span class="footer-status-txt1">4</span>
-					<span class="footer-status-txt1">OUTPUT</span>
-					<span class="footer-status-txt1" id="output1">1</span>
-					<span class="footer-status-txt1" id="output2">2</span>
-					<span class="footer-status-txt1" id="output3">3</span>
-					<span class="footer-status-txt1" id="output4">4</span>
-					<span class="footer-status-txt1" id="output5">5</span>
-					<span class="footer-status-txt1" id="output6">6</span>
-				</span>
-			</li>
-		</ul>
-	</div>
-	<div class="right-menu">
-		<ul class="right-ul">
-			<li>
-				<img src="../images/FORCE_BACK_ON.png">
-				<span class="right-title-txt">압조력</span>
-			</li>
-			<li>
-                <a href="./peak.html">
-                    <img src="../images/main_icon06.png">
-                    <span class="right-title-txt">피크</span>
-                </a>
-			</li>
-			<li>
-				<img src="../images/main_icon07.png">
-				<span class="right-title-txt">SPOP</span>
-			</li>
-			<li>
-				<img src="../images/main_icon08.png">
-				<span class="right-title-txt1">생산제품</span>
-				<span class="right-title-txt2">56,029</span>
-			</li>
-			<li>
-				<img src="../images/main_icon08.png">
-				<span class="right-title-txt1">제품생산량</span>
-				<span class="right-title-txt2">56,029</span>
-			</li>
-			<li>
-				<img src="../images/main_icon08.png">
-				<span class="right-title-txt1">일일생산량</span>
-				<span class="right-title-txt2">56,029</span>
-			</li>
-			<li>
-				<img src="../images/main_icon09.png">
-				<span class="right-title-txt1">생산목표</span>
-				<span class="right-title-txt2">10</span>
-				<span class="right-title-txt3">0%</span>
-				<span class="right-title-txt4">
-					<img src="../images/clock.png" class="clock-icon"> 00:00:00
-				</span>
-				<div class="right-bar-graph">
-					<p class="position:relative;">
-						<span class="right-bar-gauge"></span>
-					</p>
-				</div>
-			</li>
-			<li class="right-spm">
-				<span>0</span> [SPM]
-			</li>
-			<li onclick="getStart();">
-				<img src="../images/main_icon10.png">
-				<span class="right-title-txt">학 습</span>
-			</li>
-		</ul>
-	</div>
+	<div class="footer"></div>
+	<div class="right-menu"></div>
 	<!--
 	<div class="right-menu">
 		<div class="right-btn active-btn"><object data="../images/graph.svg" class="active-img" style="fill:white"></object><br>압조력</div>
@@ -194,7 +94,10 @@
 	-->
 </div>
 
-
+<script>
+    $(".right-menu").load("../include/right-menu.html");
+    $(".footer").load("../include/footer-ul.html");
+</script>
 <script src="../js/main.js"></script>
 </body>
 </html>
