--- a/views/3view/include/right-menu.html
+++ b/views/3view/include/right-menu.html
@@ -1,7 +1,7 @@
 <ul class="right-ul">
     <li>
         <a href="./main.html">
-            <img src="../images/FORCE_BACK_ON.png">
+            <img src="../images/FORCE_BACK_ON.png" id="menu1">
             <span class="right-title-txt">압조력</span>
         </a>
     </li>
